# Keylogger

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  CONTRIBUTORS_AUTOMATION.md  DISCLAIMER.md  README.md  key_logger.py  manual.sh  pyproject.toml  requirements.txt  setup.sh  web_server.py
.github/workflows/: codeql.yml  contributors.yml  counter.yml  package.yml  release.yml
Sign in/: index.html
config/: .env.example  config.json.example
docs/: CHANGES.md  INSTALLATION.md  manual.sh
scripts/: create-release.sh
src/: __init__.py  keylogger.py  server.py
tests/: __init__.py  test_basic.py
